[package]
name = "chain"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bip39={version = "2.0.0",features  = ["rand"]}
bip32="0.5.1"
rand_core = { version = "0.6", features = ["std"] }
hex="0.4"
k256="0.13.1"
sha3="0.10.8"
sha2 = { version = "0.10", default-features = false }
hmac="0.12.1"
num-bigint = "0.4"